--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-    "liveServer.settings.port": 5501
+    "liveServer.settings.port": 5501,
+    "cSpell.words": [
+        "Alura",
+        "Ecólogo",
+        "Erazo",
+        "Kike",
+        "Latam",
+        "Popayán",
+        "UNIMINUTO"
+    ]
 }
